[WPE] gamepad/gamepad-visibility-1.html is failing https://bugs.webkit.org/show_bug.cgi?id=259104

Reviewed by Don Olmstead.

Do not instantiate WPE WebPageProxy if provider is a MockProvider.

Also, garden test 'imported/w3c/web-platform-tests/gamepad/gamepad-secure-context.html'.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebKit/UIProcess/Gamepad/libwpe/UIGamepadProviderLibWPE.cpp:
(WebKit::UIGamepadProvider::platformWebPageProxyForGamepadInput):

Canonical link: https://commits.webkit.org/265981@main